New background + right address

--- a/NFC/tag1.html
+++ b/NFC/tag1.html
@@ -50,6 +50,7 @@
 <style>
 html, body {
     height: 100%;
+    background-color: #FF9900;
 }
 </style>
     </head>
@@ -95,9 +96,11 @@ html, body {
         </div>
         <div class="container h-100 d-flex justify-content-center">
     <div class="jumbotron my-auto">
-      <strong class="bitcoin-address" data-bc-address="3MVZKyYAAMx6MMtG1j6b1vhjDJr5jdo8Lwe">3MVZKyYAAMx6MMtG1j6b1vhjDJr5jdo8Lw</strong>
+      <strong class="bitcoin-address" data-bc-address="3MVZKyYAAMx6MMtG1j6b1vhjDJr5jdo8Lw">3MVZKyYAAMx6MMtG1j6b1vhjDJr5jdo8Lw</strong>
     </div>
 </div>
+    
+    
 
     </body>
 </html>
